--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "feedback-app-backend"
+name = "rf-feedback-app"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,6 +9,7 @@ edition = "2021"
 axum = { version = "0.6.4", features = ["macros"] }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
-tokio = { version = "1.24.2", features = ["full"] }
+shuttle-service = { version = "0.9.0", features = ["web-axum"] }
+sync_wrapper = "0.1.1"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
