--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
 shuttle-service = { version = "0.9.0", features = ["web-axum"] }
 sync_wrapper = "0.1.1"
+tower-http = { version = "0.3.5", features = ["cors"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
