--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,6 @@ serde_json = "1.0.91"
 shuttle-service = { version = "0.9.0", features = ["web-axum"] }
 sync_wrapper = "0.1.1"
 thiserror = "1.0.38"
-tower-http = { version = "0.3.5", features = ["cors"] }
-tracing = "0.1.37"
-tracing-subscriber = "0.3.16"
+tower-http = { version = "0.3.5", features = ["cors", "trace"] }
+tracing = { version = "0.1.37", features = ["attributes"] }
 validator = { version = "0.16.0", features = ["derive"] }
