--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,9 @@ axum = { version = "0.6.4", features = ["macros"] }
 http-body = "0.4.5"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
-shuttle-service = { version = "0.9.0", features = ["web-axum"] }
+shuttle-axum = "0.19.0"
+shuttle-runtime = "0.19.0"
+tokio = "1.28.2"
 sync_wrapper = "0.1.1"
 thiserror = "1.0.38"
 tower-http = { version = "0.3.5", features = ["cors", "trace"] }
