--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,10 @@ axum = { version = "0.6.4", features = ["macros"] }
 http-body = "0.4.5"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
-shuttle-axum = "0.19.0"
-shuttle-runtime = "0.19.0"
+shuttle-axum = "0.21.0"
+shuttle-shared-db = { version = "0.21.0", features = ["postgres"] }
+shuttle-runtime = "0.21.0"
+sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "migrate"] }
 tokio = "1.28.2"
 sync_wrapper = "0.1.1"
 thiserror = "1.0.38"
