--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ thiserror = "1.0.38"
 tower-http = { version = "0.3.5", features = ["cors", "trace"] }
 tracing = { version = "0.1.37", features = ["attributes"] }
 validator = { version = "0.16.0", features = ["derive"] }
+dotenvy_macro = "0.15.7"
