--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ tower-http = { version = "0.3.5", features = ["cors", "trace"] }
 tracing = { version = "0.1.37", features = ["attributes"] }
 validator = { version = "0.16.0", features = ["derive"] }
 dotenvy_macro = "0.15.7"
+anyhow = "1.0.72"
