--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,8 @@ tracing = { version = "0.1.37", features = ["attributes"] }
 validator = { version = "0.16.0", features = ["derive"] }
 dotenvy_macro = "0.15.7"
 anyhow = "1.0.72"
+
+[dev-dependencies]
+hyper = "0.14.27"
+serde_urlencoded = "0.7.1"
+tower = "0.4.13"
